# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: pyproject.toml
backend/app/: chat_schemas.py  config.py  db.py  document_schemas.py  documents.py  llm.py  main.py  schemas.py  security.py
backend/app/routers/: auth.py  chat.py  documents.py  health.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_db.py  test_documents.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthForm.tsx  DocumentChat.tsx  DocumentsPanel.tsx  GenericPreview.tsx  NdaChat.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/lib/: api.ts  documentFields.ts  genericPdf.tsx  nda.ts  ndaPdf.tsx
scripts/: start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
