[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal v1 backend: FastAPI serving the static frontend with SQLite-backed auth."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "litellm>=1.55",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.uv]
package = false
